--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,28 +66,27 @@
             android:backgroundTint="@color/black"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layoutShow"
+    <RelativeLayout
+        android:id="@+id/recyclerViewContainer"
         android:layout_width="match_parent"
-        android:layout_height="520dp"
-        android:layout_marginBottom="50dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/laybtnSelect"
+        app:layout_constraintBottom_toTopOf="@id/btnAddHome"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="16dp">
+        app:layout_constraintEnd_toEndOf="parent">
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/Show_task"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="8dp" >
+
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btnAddHome"
