Update Dalete and Update data

--- a/app/src/main/res/layout/activity_edit_page.xml
+++ b/app/src/main/res/layout/activity_edit_page.xml
@@ -8,40 +8,54 @@
     android:layout_height="match_parent"
     tools:context=".Edit_page">
 
-
-  <TextView
-      android:id="@+id/Add"
-      android:layout_width="190dp"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="52dp"
-      android:layout_marginEnd="16dp"
-      android:gravity="center"
-      android:text="Add"
-      android:textSize="30sp"
-      android:textStyle="bold"
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="80dp"
+      android:layout_margin="16dp"
+      android:layout_marginTop="64dp"
+      android:orientation="horizontal"
+      app:layout_constraintBottom_toTopOf="@+id/edtEditTask"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"></TextView>
+      app:layout_constraintTop_toTopOf="parent">
 
-  <Button
-      android:id="@+id/btnBackEdit"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="1dp"
-      android:layout_marginBottom="635dp"
-      android:contentDescription="This is A ฺBack button"
-      android:text="Back"
-      android:textSize="15sp"
-      android:textStyle="bold"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.936">
+    <Button
+        android:id="@+id/btnBackEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:contentDescription="This is A ฺBack button"
+        android:text="Back"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8">
 
-  </Button>
+    </Button>
+
+    <TextView
+        android:id="@+id/Add"
+        android:layout_width="194dp"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Add"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+    <Button
+        android:id="@+id/btnSaveEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/green"
+        android:contentDescription="This is Save add button"
+        android:text="Save"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8"/>
+  </LinearLayout>
 
   <EditText
       android:id="@+id/edtEditTask"
@@ -95,17 +109,19 @@
         android:text="Delete"
         android:textColor="@color/red"
         android:textSize="25sp"
-        android:textStyle="bold"></Button>
+        android:textStyle="bold"/>
 
     <Button
-        android:id="@+id/btnSaveEdit"
+        android:id="@+id/btnDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/black"
-        android:contentDescription="This is Save add button"
-        android:text="Save"
+        android:text="Done"
         android:textSize="25sp"
-        android:textStyle="bold"></Button>
+        android:textStyle="bold"
+        android:contentDescription="Done your task"
+        />
+
+
 
   </LinearLayout>
 
