--- a/app/src/main/res/layout/activity_add_page.xml
+++ b/app/src/main/res/layout/activity_add_page.xml
@@ -71,6 +71,21 @@
 
     </EditText>
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Edit_Time_Add"
+        android:layout_marginHorizontal="20dp"
+        android:padding="20dp"
+        android:id="@+id/btnCategory"
+        >
+
+
+    </Spinner>
+
 
     <LinearLayout
         android:id="@+id/laybtnAdd"
