--- a/app/src/main/res/layout/activity_edit_page.xml
+++ b/app/src/main/res/layout/activity_edit_page.xml
@@ -9,6 +9,7 @@
     tools:context=".Edit_page">
 
   <LinearLayout
+      android:id="@+id/linearLayout"
       android:layout_width="match_parent"
       android:layout_height="80dp"
       android:layout_margin="16dp"
@@ -42,6 +43,7 @@
         android:text="Add"
         android:textSize="30sp"
         android:textStyle="bold" />
+
     <Button
         android:id="@+id/btnSaveEdit"
         android:layout_width="wrap_content"
@@ -54,7 +56,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8"/>
+        app:layout_constraintVertical_bias="0.8" />
   </LinearLayout>
 
   <EditText
@@ -86,6 +88,20 @@
       app:layout_constraintStart_toStartOf="parent">
 
   </EditText>
+
+  <Spinner
+      android:id="@+id/btnCategory_edit"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginHorizontal="20dp"
+      android:layout_marginTop="30dp"
+      android:padding="20dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/Edit_Time_Edit">
+
+
+  </Spinner>
 
 
   <LinearLayout
